[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "sphinx_biel"
author = "TechDocs Studio"
author-email = "hi@techdocs.studio"
home-page = "https://github.com/TechDocsStudio/sphinx-biel"
description-file = "README.rst"
requires-python = ">=3.7"
requires = ["sphinx >= 3"]
classifiers=[
  "Framework :: Sphinx :: Extension",
]

[tool.flit.metadata.requires-extra]
test = [
  "pre-commit",
  "pytest",
]
doc = ["furo"]
